--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                             <ul id="menu-navigation" class="sf-menu">
                                 <li id="menu-item-2984" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-550 current_page_item menu-item-2984"><a href="http://www.emanuelecolombo.it/">主页</a></li>
                                 <li id="menu-item-3137" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3137"><a href="http://www.emanuelecolombo.it/about/">关于</a></li>
-                                <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3062"><a href="http://www.emanuelecolombo.it/contact/">联系</a></li>
+                                <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3062"><a href="/contact">联系</a></li>
                             </ul>
                         </nav>
                         <a href="#" data-target="open-menu" class="mobile-toggle">
@@ -645,7 +645,7 @@
                                     <div class="portfolio-holder" style="padding-bottom: ">
                                         <div class="thb-placeholder first"><img src="img/6.png" alt="" width="760" height="700"></div>
                                         <a href="http://www.emanuelecolombo.it/portfolio/googlevaccine/" rel="bookmark" class="portfolio-link portfolio-link">
-                                        <h2><span>教育公司的一天</span></h2>
+                                        <h2><span>教育企业的一天</span></h2>
                                             <aside class="thb-categories"><span>点击查看更多信息</span></aside>
                                         </a>
                                     </div>
@@ -675,7 +675,7 @@
                                     <div class="portfolio-holder" style="padding-bottom: ">
                                         <div class="thb-placeholder first"><img src="img/9.png" alt="" width="760" height="700"></div>
                                         <a href="http://www.emanuelecolombo.it/portfolio/yt/" rel="bookmark" class="portfolio-link portfolio-link">
-                                        <h2><span>老师的一天</span></h2>
+                                        <h2><span>部门职责介绍</span></h2>
                                             <aside class="thb-categories"><span>点击查看更多信息</span></aside>
                                         </a>
                                     </div>
@@ -685,7 +685,7 @@
                                     <div class="portfolio-holder" style="padding-bottom: ">
                                         <div class="thb-placeholder first"><img src="img/10.png" alt="" width="760" height="700"></div>
                                         <a href="http://www.emanuelecolombo.it/portfolio/change/" rel="bookmark" class="portfolio-link portfolio-link">
-                                        <h2><span>部门分工介绍</span></h2>
+                                        <h2><span>成为在线英语导师</span></h2>
                                             <aside class="thb-categories"><span>点击查看更多信息</span></aside>
                                         </a>
                                     </div>
@@ -695,7 +695,7 @@
                                     <div class="portfolio-holder" style="padding-bottom: ">
                                         <div class="thb-placeholder first"><img src="img/11.png" alt="" width="760" height="700"></div>
                                         <a href="http://www.emanuelecolombo.it/portfolio/glic/" rel="bookmark" class="portfolio-link portfolio-link">
-                                            <h2><span>不问大师IP</span></h2>
+                                            <h2><span>新老师培训</span></h2>
                                             <aside class="thb-categories"><span>点击查看更多信息</span></aside>
                                         </a>
                                     </div>
@@ -705,7 +705,7 @@
                                     <div class="portfolio-holder" style="padding-bottom: ">
                                         <div class="thb-placeholder first"><img src="img/12.png" alt="" width="760" height="700"></div>
                                         <a href="http://www.emanuelecolombo.it/portfolio/walmart/" rel="bookmark" class="portfolio-link portfolio-link">
-                                        <h2><span>美图手机</span></h2>
+                                        <h2><span>母爱</span></h2>
                                             <aside class="thb-categories"><span>点击查看更多信息</span></aside>
                                         </a>
                                     </div>
