--- a/contact.html
+++ b/contact.html
@@ -557,7 +557,7 @@
                             <ul id="menu-navigation" class="sf-menu">
                                 <li id="menu-item-2984" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-2984"><a href="http://www.emanuelecolombo.it/">主页</a></li>
                                 <li id="menu-item-3137" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3137"><a href="http://www.emanuelecolombo.it/about/">关于</a></li>
-                                <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-493 current_page_item menu-item-3062"><a href="http://www.emanuelecolombo.it/contact/">联系</a></li>
+                                <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-493 current_page_item menu-item-3062"><a href="/contact">联系</a></li>
                             </ul>
                         </nav>
                         <a href="#" data-target="open-menu" class="mobile-toggle">
