--- a/tpc.googlesyndication.com/sodar/sodar2/225/runner.html
+++ b/tpc.googlesyndication.com/sodar/sodar2/225/runner.html
@@ -559,7 +559,7 @@
             return oa(a)
         }
         var na = /%{(\w+)}/g,
-            ma = /^((https:)?\/\/[0-9a-z.:[\]-]+\/|\/[^/\\]|[^:/\\%]+\/|[^:/\\%]*[?#]|about:blank#)/i,
+            ma = /^((https:)?\/\/[0-9a-z.:[\]-]+\/|\/[^/\\]|[^:/\\%]+\/|[^:/\\%]*[?#]|关于:blank#)/i,
             ka = {};
 
         function oa(a) {
