--- a/about.html
+++ b/about.html
@@ -1047,12 +1047,9 @@
                 <a href="#" class="panel-close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" enable-background="new 0 0 64 64"><g fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10"><path d="m18.947 17.15l26.1 25.903"/><path d="m19.05 43.15l25.902-26.1"/></g></svg></a>
                 <div class="menu-holder">
                     <ul id="menu-navigation-1" class="mobile-menu">
-                        <li id="menu-item-2984" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-2984"><a href="http://www.emanuelecolombo.it/">Home</a></li>
-                        <li id="menu-item-3137" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3123 current_page_item menu-item-3137"><a href="http://www.emanuelecolombo.it/about/">About</a></li>
-                        <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3062"><a href="http://www.emanuelecolombo.it/contact/">Contact</a></li>
-                        <li id="menu-item-3064" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-3064"><a href="http://www.emanuelecolombo.it/motionsecrets/">Motion Secrets<div class="thb-arrow"></div></a>
-                           
-                        </li>
+                  <li id="menu-item-2984" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-550 current_page_item menu-item-2984"><a href="/index">主页</a></li>
+                        <li id="menu-item-3137" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3137"><a href="/about">关于</a></li>
+                        <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3062"><a href="/contact">联系</a></li>
                     </ul>
                 </div>
                 <div class="menu-footer">
