--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="dns-prefetch" href="//2.gravatar.com/" />
     <link rel="dns-prefetch" href="//1.gravatar.com/" />
     <!-- This site is optimized with the Yoast SEO plugin v17.9 - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Contact - Emanuele Colombo</title>
+    <title>联系 - 橙子动漫</title>
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="canonical" href="http://www.emanuelecolombo.it/contact/" />
     <meta property="og:locale" content="en_US" />
@@ -599,7 +599,9 @@
                     <p>联系方式!</p>
                     <p><a href="mailto:2546279355@qq.com"><strong>2546279355@qq.com</strong></a></p>
                     <div class="social-links">
-                       
+                       <li id="menu-item-2984" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-550 current_page_item menu-item-2984"><a href="/index">主页</a></li>
+                        <li id="menu-item-3137" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3137"><a href="/about">关于</a></li>
+                        <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3062"><a href="/contact">联系</a></li>
 					</div>
                 </div>
             </div>
