--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="dns-prefetch" href="//1.gravatar.com/" />
     <!-- This site is optimized with the Yoast SEO plugin v17.9 - https://yoast.com/wordpress/plugins/seo/ -->
     <title>主页 - 橙子动漫</title>
-    <meta name="description" content="我是橙子，我是一名运动设计师和动画师 " />
+    <meta name="description" content="我是橙子，我是一名动态设计师和动画师 " />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="canonical" href="http://www.emanuelecolombo.it/" />
     <meta property="og:locale" content="en_US" />
@@ -481,9 +481,9 @@
 			full-width-row no-padding ">
                 <div class="small-12 columns">
                     <div class="logo-holder">
-                        <a href="http://czdm.github.io" class="logolink">
+                      <a href="http://czdm.github.io" class="logolink">
 					<img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg" alt="橙子动漫"/>
-					<img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg logo_light" alt="橙子动漫"/>
+					<img src="img/logo1.png" class="logoimg logo_light" alt="橙子动漫"/>
 				</a>
                     </div>
                     <div class="menu-holder icon-holder">
