--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="dns-prefetch" href="//2.gravatar.com/" />
     <link rel="dns-prefetch" href="//1.gravatar.com/" />
     <!-- This site is optimized with the Yoast SEO plugin v17.9 - https://yoast.com/wordpress/plugins/seo/ -->
-     <title>联系 - 橙子动漫</title>
+    <title>联系 - 橙子动漫</title>
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="canonical" href="http://www.emanuelecolombo.it/contact/" />
     <meta property="og:locale" content="en_US" />
@@ -525,7 +525,7 @@
                                 <div class="wpb_wrapper">
                                     <h2></h2>
                                     <h2>联系方式</h2>
-                                    <p>如果你需要一个报价或如果你只是想说嗨，请不要犹豫联系我。 
+                                    <p>如果您需要一个报价，请不要犹豫联系我。 
 										给我发邮件或者填好表格就行了。</p>
                                     <p><a href="https://web.archive.org/web/20180925135115/mailto:2546279355@qq.com">2546279355@qq.com</a><br /> 微信: mgchenson</p>
 
@@ -552,10 +552,10 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="small-12 large-6 columns">
-                                                            <label>你的名字</label> <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required full" aria-required="true" aria-invalid="false" /></span>
+                                                            <label>您的名字</label> <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required full" aria-required="true" aria-invalid="false" /></span>
                                                         </div>
                                                         <div class="small-12 large-6 columns">
-                                                            <label>你的邮箱</label> <span class="wpcf7-form-control-wrap your-email"><input type="text" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required full" aria-required="true" aria-invalid="false" /></span>
+                                                            <label>您的邮箱</label> <span class="wpcf7-form-control-wrap your-email"><input type="text" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required full" aria-required="true" aria-invalid="false" /></span>
                                                         </div>
                                                         <div class="small-12 columns">
                                                             <label>主题</label> <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required full" aria-required="true" aria-invalid="false" /></span>
