--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <div class="logo-holder">
                       <a href="http://czdm.github.io" class="logolink">
 					<img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg" alt="橙子动漫"/>
-					<img src="img/logo1.png" class="logoimg logo_light" alt="橙子动漫"/>
+					<img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg logo_light" alt="橙子动漫"/>
 				</a>
                     </div>
                     <div class="menu-holder icon-holder">
@@ -579,7 +579,7 @@
                                     <div class="portfolio-holder" style="padding-bottom: ">
                                         <div class="thb-placeholder first"><img src="img/6.png" alt="" width="760" height="700"></div>
                                         <a href="http://www.emanuelecolombo.it/portfolio/googlevaccine/" rel="bookmark" class="portfolio-link portfolio-link">
-                                        <h2><span>教育企业的一天</span></h2>
+                                        <h2><span>老师上班的一天</span></h2>
                                             <aside class="thb-categories"><span>点击查看更多信息</span></aside>
                                         </a>
                                     </div>
