--- a/about.html
+++ b/about.html
@@ -510,7 +510,7 @@
                     <div class="logo-holder">
                         <a href="http://czdm.github.io" class="logolink">
 					<img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg" alt="橙子动漫"/>
-					<img src="img/logo1.png" class="logoimg logo_light" alt="橙子动漫"/>
+					<img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg logo_light" alt="橙子动漫"/>
 				</a>
                     </div>
                     <div class="menu-holder icon-holder">
