--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <script type="application/ld+json" class="yoast-schema-graph">
 
     </script>
-       <script data-cfasync="false" data-wpfc-render="false" type="text/javascript">
+      <script src="//www.googletagmanager.com/gtag/js?id=UA-22940162-2" data-cfasync="false" data-wpfc-render="false" type="text/javascript" async></script>
+    <script data-cfasync="false" data-wpfc-render="false" type="text/javascript">
         var mi_version = '8.5.3';
         var mi_track_user = true;
         var mi_no_track_reason = '';
