--- a/index.html
+++ b/index.html
@@ -674,30 +674,12 @@
                 </header>
                 <main>
 					
-                    <section class="project-covers" data-context="page.gallery.covers">
-                        <a class="project-cover js-project-cover-touch hold-space" href="/fromagerie-victoria-packaging" data-context="pages" data-identity="id:p571e38589c3c0d61f5ef7ffeaa6c2e0e9f927df901f63c0868949" data-hover-hint="galleryPageCover" data-hover-hint-id="p571e38589c3c0d61f5ef7ffeaa6c2e0e9f927df901f63c0868949">
-                        <div class="cover-content-container">
+                    <section class="project-covers" data-context="page.gallery.covers"> <a class="project-cover js-project-cover-touch hold-space" href="/brule-branding" data-context="pages" data-identity="id:p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d" data-hover-hint="galleryPageCover" data-hover-hint-id="p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d">
+                    <div class="cover-content-container">
                           <div class="cover-image-wrap">
                             <div class="cover-image">
-                              <div class="cover cover-normal"> <img class="cover__img js-lazy" src="img/2.png" data-src="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/93b5c570-b7e5-43d0-87f4-01499c733348_rwc_294x0x3628x2843x3628.jpg?h=9b23a1a1c715299ef066e9d025391d13"
-                                                data-srcset="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/93b5c570-b7e5-43d0-87f4-01499c733348_rwc_294x0x3628x2843x640.jpg?h=c4956dfef45bf8dcc99957a8a44c188b 640w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/93b5c570-b7e5-43d0-87f4-01499c733348_rwc_294x0x3628x2843x1280.jpg?h=bbd727a39af26d05d00dfa156bc82085 1280w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/93b5c570-b7e5-43d0-87f4-01499c733348_rwc_294x0x3628x2843x1366.jpg?h=02c7e4aa7321f50cd962d99ab2f6b0d9 1366w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/93b5c570-b7e5-43d0-87f4-01499c733348_rwc_294x0x3628x2843x1920.jpg?h=07fd43399793e0c45f80f5c1cfdf0ab5 1920w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/93b5c570-b7e5-43d0-87f4-01499c733348_rwc_294x0x3628x2843x2560.jpg?h=edd3b5bf3f7a0305e6b0a0a0a151477c 2560w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/93b5c570-b7e5-43d0-87f4-01499c733348_rwc_294x0x3628x2843x3628.jpg?h=9b23a1a1c715299ef066e9d025391d13 5120w"
-                                                data-sizes="(max-width: 540px) 100vw, (max-width: 768px) 50vw, calc(1600px / 4)"></div>
-                            </div>
-                          </div>
-                          <div class="details-wrap">
-                            <div class="details">
-                              <div class="details-inner">
-                                <div class="title preserve-whitespace">MG动画形象片</div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        </a><a class="project-cover js-project-cover-touch hold-space" href="/brule-branding" data-context="pages" data-identity="id:p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d" data-hover-hint="galleryPageCover" data-hover-hint-id="p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d">
-                        <div class="cover-content-container">
-                          <div class="cover-image-wrap">
-                            <div class="cover-image">
-                              <div class="cover cover-normal"> <img class="cover__img js-lazy" src="img/1.png" data-src="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/3e4def38-dd84-40c4-832f-46709fd75f23_rwc_712x282x3494x2736x3494.jpg?h=02262d34485a2e280a109e3b8db7f9a7"
-                                                data-srcset="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/3e4def38-dd84-40c4-832f-46709fd75f23_rwc_712x282x3494x2736x640.jpg?h=ef1a87a45b75311f2fb87d812445b355 640w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/3e4def38-dd84-40c4-832f-46709fd75f23_rwc_712x282x3494x2736x1280.jpg?h=0f8b7e4c9ca06c926a22745d0935e27d 1280w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/3e4def38-dd84-40c4-832f-46709fd75f23_rwc_712x282x3494x2736x1366.jpg?h=8d8bd7a0e36ffa64bf5e50bac4f096ea 1366w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/3e4def38-dd84-40c4-832f-46709fd75f23_rwc_712x282x3494x2736x1920.jpg?h=1e7daebab167b44a70c56c08297f438a 1920w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/3e4def38-dd84-40c4-832f-46709fd75f23_rwc_712x282x3494x2736x2560.jpg?h=84a8d96925b805fe7d3959d81451f36d 2560w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/3e4def38-dd84-40c4-832f-46709fd75f23_rwc_712x282x3494x2736x3494.jpg?h=02262d34485a2e280a109e3b8db7f9a7 5120w"
+                              <div class="cover cover-normal"> <img class="cover__img js-lazy" src="img/1.png" data-src=""
+                                                data-
                                                 data-sizes="(max-width: 540px) 100vw, (max-width: 768px) 50vw, calc(1600px / 4)"> </div>
                             </div>
                           </div>
@@ -705,6 +687,23 @@
                             <div class="details">
                               <div class="details-inner">
                                 <div class="title preserve-whitespace">橙子作品集</div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        </a><a class="project-cover js-project-cover-touch hold-space" href="/fromagerie-victoria-packaging" data-context="pages" data-identity="id:p571e38589c3c0d61f5ef7ffeaa6c2e0e9f927df901f63c0868949" data-hover-hint="galleryPageCover" data-hover-hint-id="p571e38589c3c0d61f5ef7ffeaa6c2e0e9f927df901f63c0868949">
+                        <div class="cover-content-container">
+                          <div class="cover-image-wrap">
+                            <div class="cover-image">
+                              <div class="cover cover-normal"> <img class="cover__img js-lazy" src="img/2.png" data-src=""
+                                                data-
+                                                data-sizes="(max-width: 540px) 100vw, (max-width: 768px) 50vw, calc(1600px / 4)"></div>
+                            </div>
+                          </div>
+                          <div class="details-wrap">
+                            <div class="details">
+                              <div class="details-inner">
+                                <div class="title preserve-whitespace">MG动画形象片</div>
                               </div>
                             </div>
                           </div>
@@ -721,7 +720,7 @@
                                                 data-srcset="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/43e29944-c667-4ee7-b29f-75410e1587e9_carw_202x158x640.png?h=8ef63c0ef19537b433839a0b9ad776cb 640w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/43e29944-c667-4ee7-b29f-75410e1587e9_carw_202x158x1280.png?h=e72168f0941ec707654b81ba069d7e35 1280w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/43e29944-c667-4ee7-b29f-75410e1587e9_carw_202x158x1366.png?h=be0cb14af339166a7811830106207e02 1366w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/43e29944-c667-4ee7-b29f-75410e1587e9_carw_202x158x1920.png?h=1f9b4b91c5d65d18fb5c8c1ba10f0f0e 1920w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/43e29944-c667-4ee7-b29f-75410e1587e9_carw_202x158x2560.png?h=c6b0bb62b471209f933c16ed07f17395 2560w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/43e29944-c667-4ee7-b29f-75410e1587e9_carw_202x158x5120.png?h=3fd4c8ebc35d4fb7cff3ba108cb25e98 5120w"
                                                 data-sizes="(max-width: 540px) 100vw, (max-width: 768px) 50vw, calc(1600px / 4)">
                                         </div>
-                                    </div>
+                                  </div>
                                 </div>
                                 <div class="details-wrap">
                                     <div class="details">
@@ -730,8 +729,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
+                        </div>
+                      </a>
                         <a class="project-cover js-project-cover-touch hold-space" href="/kevlar-branding" data-context="pages" data-identity="id:p5d6fe0843ba2ca4bce032b421ae2122f7554cbd5920aa22644a63" data-hover-hint="galleryPageCover" data-hover-hint-id="p5d6fe0843ba2ca4bce032b421ae2122f7554cbd5920aa22644a63">
                             <div class="cover-content-container">
                                 <div class="cover-image-wrap">
@@ -741,7 +740,7 @@
                                             <img class="cover__img js-lazy" src="img/4.png" data-src="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/70f2c50c-6c7e-455f-9fdd-1e76326023ec_car_202x158.jpg?h=2832bbff2edfaa2ce57af01f5059520d"
                                                 data-srcset="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/70f2c50c-6c7e-455f-9fdd-1e76326023ec_carw_202x158x640.jpg?h=892dbcbc2edffb1cb6928e52683f3c6a 640w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/70f2c50c-6c7e-455f-9fdd-1e76326023ec_carw_202x158x1280.jpg?h=c1c40990159a0806cc3d9015fa281ea7 1280w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/70f2c50c-6c7e-455f-9fdd-1e76326023ec_carw_202x158x1366.jpg?h=2145e57ac9ed4d83f373d39ef89027c3 1366w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/70f2c50c-6c7e-455f-9fdd-1e76326023ec_carw_202x158x1920.jpg?h=ae93306fa4b831fc2e754f752d87734e 1920w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/70f2c50c-6c7e-455f-9fdd-1e76326023ec_carw_202x158x2560.jpg?h=10d1c207e2a1e56607a20e240d049a3a 2560w, https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/70f2c50c-6c7e-455f-9fdd-1e76326023ec_carw_202x158x5120.jpg?h=ea9c0703b6cfeba7f22f003563379b9e 5120w"
                                                 data-sizes="(max-width: 540px) 100vw, (max-width: 768px) 50vw, calc(1600px / 4)">
-                                        </div>
+                                      </div>
                                     </div>
                                 </div>
                                 <div class="details-wrap">
@@ -900,7 +899,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                      </a>
                       <a class="project-cover js-project-cover-touch hold-space" href="/toiles" data-context="pages" data-identity="id:p5f8f4abeebbf6e1faa457fe1d0fab8e3c5e2c45b9a1c8cb519b3e" data-hover-hint="galleryPageCover" data-hover-hint-id="p5f8f4abeebbf6e1faa457fe1d0fab8e3c5e2c45b9a1c8cb519b3e">
                       <div class="cover-content-container">
                         <div class="cover-image-wrap">
