--- a/contact.html
+++ b/contact.html
@@ -567,7 +567,7 @@
     <meta name="description" content="Illustration x Design graphique" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AdobePortfolio" />
-    <meta property="og:title" content="WN ART &amp; DESIGN - Contact" />
+    <meta property="og:title" content="橙子动漫 - 联系" />
     <meta property="og:description" content="Illustration x Design graphique" />
     <meta property="og:image" content="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/b6b52de0-0285-4edf-91ce-a4aa163a0564_rw_600.png?h=f4425920f0ddbf4b11690325c25ad6f1" />
     <link rel="icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/444d2d94-6a9b-4418-b53f-536c92b5cdae_carw_1x1x32.png?h=7c0f715d771cab3c585146fdbdc8c942" />
@@ -603,40 +603,7 @@
                     <div class="page-title">
                         <a href="/contact" class="active">Contact</a>
                     </div>
-                    <div class="social pf-nav-social" data-hover-hint="navSocialIcons">
-                        <ul>
-                            <li>
-                                <a href="https://www.behance.net/migxwn" target="_blank">
-                              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 24" class="icon"><path id="path-1" d="M18.83,14.38a2.78,2.78,0,0,0,.65,1.9,2.31,2.31,0,0,0,1.7.59,2.31,2.31,0,0,0,1.38-.41,1.79,1.79,0,0,0,.71-0.87h2.31a4.48,4.48,0,0,1-1.71,2.53,5,5,0,0,1-2.78.76,5.53,5.53,0,0,1-2-.37,4.34,4.34,0,0,1-1.55-1,4.77,4.77,0,0,1-1-1.63,6.29,6.29,0,0,1,0-4.13,4.83,4.83,0,0,1,1-1.64A4.64,4.64,0,0,1,19.09,9a4.86,4.86,0,0,1,2-.4A4.5,4.5,0,0,1,23.21,9a4.36,4.36,0,0,1,1.5,1.3,5.39,5.39,0,0,1,.84,1.86,7,7,0,0,1,.18,2.18h-6.9Zm3.67-3.24A1.94,1.94,0,0,0,21,10.6a2.26,2.26,0,0,0-1,.22,2,2,0,0,0-.66.54,1.94,1.94,0,0,0-.35.69,3.47,3.47,0,0,0-.12.65h4.29A2.75,2.75,0,0,0,22.5,11.14ZM18.29,6h5.36V7.35H18.29V6ZM13.89,17.7a4.4,4.4,0,0,1-1.51.7,6.44,6.44,0,0,1-1.73.22H4.24V5.12h6.24a7.7,7.7,0,0,1,1.73.17,3.67,3.67,0,0,1,1.33.56,2.6,2.6,0,0,1,.86,1,3.74,3.74,0,0,1,.3,1.58,3,3,0,0,1-.46,1.7,3.33,3.33,0,0,1-1.35,1.12,3.19,3.19,0,0,1,1.82,1.26,3.79,3.79,0,0,1,.59,2.17,3.79,3.79,0,0,1-.39,1.77A3.24,3.24,0,0,1,13.89,17.7ZM11.72,8.19a1.25,1.25,0,0,0-.45-0.47,1.88,1.88,0,0,0-.64-0.24,5.5,5.5,0,0,0-.76-0.05H7.16v3.16h3a2,2,0,0,0,1.28-.38A1.43,1.43,0,0,0,11.89,9,1.73,1.73,0,0,0,11.72,8.19ZM11.84,13a2.39,2.39,0,0,0-1.52-.45H7.16v3.73h3.11a3.61,3.61,0,0,0,.82-0.09A2,2,0,0,0,11.77,16a1.39,1.39,0,0,0,.47-0.54,1.85,1.85,0,0,0,.17-0.88A1.77,1.77,0,0,0,11.84,13Z"/></svg>
-                            </a>
-                            </li>
-                            <li>
-                                <a href="https://www.facebook.com/migxwn/?fref=ts" target="_blank">
-                              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 30 24" xml:space="preserve" class="icon"><path d="M16.21 20h-3.26v-8h-1.63V9.24h1.63V7.59c0-2.25 0.92-3.59 3.53-3.59h2.17v2.76H17.3 c-1.02 0-1.08 0.39-1.08 1.11l0 1.38h2.46L18.38 12h-2.17V20z"/></svg>
-                            </a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/wnartdesign/" target="_blank">
-                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 30 24" style="enable-background:new 0 0 30 24;" xml:space="preserve" class="icon">
-                              <g>
-                                <path d="M15,5.4c2.1,0,2.4,0,3.2,0c0.8,0,1.2,0.2,1.5,0.3c0.4,0.1,0.6,0.3,0.9,0.6c0.3,0.3,0.5,0.5,0.6,0.9
-                                  c0.1,0.3,0.2,0.7,0.3,1.5c0,0.8,0,1.1,0,3.2s0,2.4,0,3.2c0,0.8-0.2,1.2-0.3,1.5c-0.1,0.4-0.3,0.6-0.6,0.9c-0.3,0.3-0.5,0.5-0.9,0.6
-                                  c-0.3,0.1-0.7,0.2-1.5,0.3c-0.8,0-1.1,0-3.2,0s-2.4,0-3.2,0c-0.8,0-1.2-0.2-1.5-0.3c-0.4-0.1-0.6-0.3-0.9-0.6
-                                  c-0.3-0.3-0.5-0.5-0.6-0.9c-0.1-0.3-0.2-0.7-0.3-1.5c0-0.8,0-1.1,0-3.2s0-2.4,0-3.2c0-0.8,0.2-1.2,0.3-1.5c0.1-0.4,0.3-0.6,0.6-0.9
-                                  c0.3-0.3,0.5-0.5,0.9-0.6c0.3-0.1,0.7-0.2,1.5-0.3C12.6,5.4,12.9,5.4,15,5.4 M15,4c-2.2,0-2.4,0-3.3,0c-0.9,0-1.4,0.2-1.9,0.4
-                                  c-0.5,0.2-1,0.5-1.4,0.9C7.9,5.8,7.6,6.2,7.4,6.8C7.2,7.3,7.1,7.9,7,8.7C7,9.6,7,9.8,7,12s0,2.4,0,3.3c0,0.9,0.2,1.4,0.4,1.9
-                                  c0.2,0.5,0.5,1,0.9,1.4c0.4,0.4,0.9,0.7,1.4,0.9c0.5,0.2,1.1,0.3,1.9,0.4c0.9,0,1.1,0,3.3,0s2.4,0,3.3,0c0.9,0,1.4-0.2,1.9-0.4
-                                  c0.5-0.2,1-0.5,1.4-0.9c0.4-0.4,0.7-0.9,0.9-1.4c0.2-0.5,0.3-1.1,0.4-1.9c0-0.9,0-1.1,0-3.3s0-2.4,0-3.3c0-0.9-0.2-1.4-0.4-1.9
-                                  c-0.2-0.5-0.5-1-0.9-1.4c-0.4-0.4-0.9-0.7-1.4-0.9c-0.5-0.2-1.1-0.3-1.9-0.4C17.4,4,17.2,4,15,4L15,4L15,4z"/>
-                                <path d="M15,7.9c-2.3,0-4.1,1.8-4.1,4.1s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S17.3,7.9,15,7.9L15,7.9z M15,14.7c-1.5,0-2.7-1.2-2.7-2.7
-                                  c0-1.5,1.2-2.7,2.7-2.7s2.7,1.2,2.7,2.7C17.7,13.5,16.5,14.7,15,14.7L15,14.7z"/>
-                                <path d="M20.2,7.7c0,0.5-0.4,1-1,1s-1-0.4-1-1s0.4-1,1-1S20.2,7.2,20.2,7.7L20.2,7.7z"/>
-                              </g>
-                              </svg>
-                            </a>
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="social pf-nav-social" data-hover-hint="navSocialIcons"> </div>
                 </nav>
             </div>
         </div>
@@ -692,9 +659,7 @@ padding-bottom: 0px;
 ">
                                             <div class="rich-text js-text-editable module-text">
                                                 <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">联系方式<br><br></span></span>
-                                                    </span>Évoluant dans le milieu créatif depuis plus de 15 ans,<br>je suis une personne ordonnée et qui aime bien faire les choses.<br><br>Passionné par tout ce qui s’appelle art, illustration et design graphique,<br>j’ai
-                                                    choisi d’en faire ma carrière. Que ce soit en développant l’identité visuelle<br>d’une entreprise ou en illustrant un livre pour enfants, j’ai toujours besoin<br>de créer de belles choses. Et ça, c’est
-                                                    une bonne nouvelle pour vous.<br><br>Écrivez-moi pour discuter des projets qu’on pourrait réaliser ensemble.<br>Si vous avez une idée en tête, je vais le faire et je vais bien le faire.<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
+                                                    </span>在动画行业工作超过6年,<br>我是一个有条理的人，喜欢做事.<br><br>热爱艺术、影视剪辑和动画设计,<br>我选择把它作为我的职业。无论是开发一个企业的宣传视频<br>还是在生活中创作，我总是需要创造美丽的东西<br>这对你来说是个好消息。<br><br>写信给我讨论我们可以一起完成的项目.<br>如果你有什么想法，我会去做的，我会做得很好。<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
                                                     </span><span style="font-family:gmsj; font-style:normal; font-weight:700;"></span><br></div>
                                             </div>
                                         </div>
@@ -713,23 +678,23 @@ padding-bottom: 0px;
                                             <form class="contact-form e2e-site-contact-form">
 
                                                 <div class="form-input">
-                                                    <label for="field1">Nom *</label>
+                                                    <label for="field1">名字 *</label>
                                                     <input type="text" name="field1" data-validate="required,Generic" placeholder="" required />
                                                 </div>
 
                                                 <div class="form-input">
-                                                    <label for="email">Courriel *</label>
+                                                    <label for="email">电子邮件 *</label>
                                                     <input type="text" name="email" data-validate="required,Email,required" placeholder="" required />
                                                 </div>
 
                                                 <div class="form-input">
-                                                    <label for="field2">Message *</label>
+                                                    <label for="field2">留言*</label>
                                                     <textarea name="field2" data-validate="required,Generic" placeholder="" required></textarea>
                                                 </div>
-                                                <div class="js-submit submit-button" data-id="m5ff623a67476e729aad311b4cb045f2f3cdab0f7add001bcb922a"><span class="js-submit-text submit-text preserve-whitespace">Envoyer</span></div>
+                                                <div class="js-submit submit-button" data-id="m5ff623a67476e729aad311b4cb045f2f3cdab0f7add001bcb922a"><span class="js-submit-text submit-text preserve-whitespace">发送</span></div>
                                             </form>
                                             <div class="contact-form-sent">
-                                                Thank you!
+                                                谢谢!
                                             </div>
                                         </div>
 
