--- a/index.html
+++ b/index.html
@@ -594,28 +594,18 @@
             <div class="close-responsive-click-area js-close-responsive-nav">
                 <div class="close-responsive-button"></div>
             </div>
-            <div class="nav-container"> </div>
-			        <nav id="mobile-menu" class="style2" data-behaviour="thb-submenu">
-            <div class="spacer"></div>
-            <div class="menu-container custom_scroll">
-                <a href="#" class="panel-close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" enable-background="new 0 0 64 64"><g fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10"><path d="m18.947 17.15l26.1 25.903"/><path d="m19.05 43.15l25.902-26.1"/></g></svg></a>
-                <div class="menu-holder">
-                    <ul id="menu-navigation-1" class="mobile-menu">
-                        <li id="menu-item-2984" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-550 current_page_item menu-item-2984"><a href="/index">主页</a></li>
-                        <li id="menu-item-3137" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3137"><a href="/about">关于</a></li>
-                        <li id="menu-item-3062" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3062"><a href="/contact">联系</a></li>
-                    </ul>
-                </div>
-
-                <div class="menu-footer">
-                    <p>联系方式!</p>
-                    <p><a href="2546279355@qq.com"><strong>2546279355@qq.com</strong></a></p>
-                    <div class="social-links">
-                        
+            <div class="nav-container">
+                <nav data-hover-hint="nav">
+                    <div class="gallery-title"><a href="/portfolio" class="active">主页</a></div>
+                    <div class="page-title">
+                        <a href="/services">关于</a>
                     </div>
-                </div>
+                    <div class="page-title">
+                        <a href="/contact">联系</a>
+                    </div>
+                    <div class="social pf-nav-social" data-hover-hint="navSocialIcons"> </div>
+                </nav>
             </div>
-        </nav>
         </div>
     </div>
     <div class="site-wrap cfix js-site-wrap">
