--- a/contact.html
+++ b/contact.html
@@ -574,8 +574,8 @@
     <link rel="apple-touch-icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/699fe73e-62ac-41df-a697-62a6ceb15b76_carw_1x1x180.png?h=de4622e431b2c1c81d53eb709134813d" />
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/0a84327519b94673ac4d5e59bbbcf9291651100219.css?h=cde6068df83240e51746001f220e9daf" type="text/css" />
-    <link rel="canonical" href="https://wnartdesign.com/contact" />
-    <title>WN ART &amp; DESIGN - Contact</title>
+    <link rel="canonical" href="" />
+    <title>橙子动漫 - 联系</title>
     <script type="text/javascript" src="//use.typekit.net/ik/2hyP9_jYVTxEKrRyOSCebwd1Yb6uql52SoR3-6R7Fj9fenCffHYEBsJzwD9oFDIDWDqUjDFcFRbDFh9UZAFcFRBRZRgRwcwuwesRZ2IoZ2mKw2MtwcJtwcJ-RbI7OcuoSeNkieZzde8zOcFzdP37O1gkdDJlic88ikolpWgzS1scdhUTdkoRdhXCHKoadcBkies8Sh81dKoRdhXCdW83da4XZcNC-Av0jhNlOYgkdDJlic88ikolpWgzS1scdhUTdkoRdhXCihoyS1sqZWFTZht0jhNlOYiaikoadcBkies8Sh81dKoRdhXKgeilShGKgYZRShX7fbRaPyMMeMI6MKG4fFJuIMMjMkMfH6qJDR9bMg6IJMJ7fbRbFsMMeMj6MKG4fFIVIMMjgkMfH6qJu29bMg64JMJ7fbKzMsMgeMb6MKG4fHXgIMIjgKMfH6qJK3IbMs6YJMHbMp0sotCe.js?cb=3542f9ec304c2dc19fc7fd80dd515314aade8328"
         async onload="
     try {
@@ -596,12 +596,12 @@
             </div>
             <div class="nav-container">
                 <nav data-hover-hint="nav">
-                    <div class="gallery-title"><a href="/portfolio">Portfolio</a></div>
+                    <div class="gallery-title"><a href="/index">主页</a></div>
                     <div class="page-title">
-                        <a href="/services">Services</a>
+                        <a href="/about">关于</a>
                     </div>
                     <div class="page-title">
-                        <a href="/contact" class="active">Contact</a>
+                        <a href="/contact" class="contact">联系</a>
                     </div>
                     <div class="social pf-nav-social" data-hover-hint="navSocialIcons"> </div>
                 </nav>
@@ -629,9 +629,9 @@
                     <div class="nav-container">
                         <nav data-hover-hint="nav">
 							
-                            <div class="gallery-title"><a href="/portfolio" class="active">主页</a></div>
+                            <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
                             <div class="page-title">
-                                <a href="/services">关于</a>
+                                <a href="/about">关于</a>
                             </div>
                             <div class="page-title">
                                 <a href="/contact">联系</a>
@@ -659,7 +659,7 @@ padding-bottom: 0px;
 ">
                                             <div class="rich-text js-text-editable module-text">
                                                 <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">联系方式<br><br></span></span>
-                                                    </span>在动画行业工作超过6年,<br>我是一个有条理的人，喜欢做事.<br><br>热爱艺术、影视剪辑和动画设计,<br>我选择把它作为我的职业。无论是开发一个企业的宣传视频<br>还是在生活中创作，我总是需要创造美丽的东西<br>这对你来说是个好消息。<br><br>写信给我讨论我们可以一起完成的项目.<br>如果你有什么想法，我会去做的，我会做得很好。<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
+                                                    </span>6年的动画行业工作经验,<br>喜欢动态设计和动画制作.<br><br>热爱艺术创作,<br>我选择把它作为我的职业。<br>无论是制作一条企业的宣传视频，还是在生活中创作，我总是需要创造美丽的东西<br>这对你来说是个好消息。<br><br>写信给我讨论我们可以一起完成的项目.<br>如果你有什么想法，我会去做的，我会做得很好。<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
                                                     </span><span style="font-family:gmsj; font-style:normal; font-weight:700;"></span><br></div>
                                             </div>
                                         </div>
@@ -713,11 +713,7 @@ padding-bottom: 0px;
 
 
 
-                                            <div class="js-lightbox" data-src="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/b6b52de0-0285-4edf-91ce-a4aa163a0564.png?h=e2f6d4502e20f39ea87cf8327fed28df">
-                                                <img class="js-lazy e2e-site-project-module-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/b6b52de0-0285-4edf-91ce-a4aa163a0564_rw_600.png?h=f4425920f0ddbf4b11690325c25ad6f1"
-                                                    data-srcset="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/b6b52de0-0285-4edf-91ce-a4aa163a0564_rw_600.png?h=f4425920f0ddbf4b11690325c25ad6f1 328w," data-sizes="(max-width: 328px) 100vw, 328px"
-                                                    width="328" height="0" style="padding-bottom: 100%; background: rgba(0, 0, 0, 0.03)">
-                                            </div>
+                                            <div class="js-lightbox" data-src=""> </div>
 
 
                                         </div>
