--- a/about.html
+++ b/about.html
@@ -595,9 +595,9 @@
             </div>
             <div class="nav-container">
                 <nav data-hover-hint="nav">
-                    <div class="gallery-title"><a href="/portfolio">主页</a></div>
+                    <div class="gallery-title"><a href="/index">主页</a></div>
                     <div class="page-title">
-                        <a href="/services" class="active">关于</a>
+                        <a href="/services" class="about">关于</a>
                     </div>
                     <div class="page-title">
                         <a href="/contact">联系</a>
@@ -628,9 +628,9 @@
                     <div class="nav-container">
                         <nav data-hover-hint="nav">
 							
-                            <div class="gallery-title"><a href="/portfolio" class="active">主页</a></div>
+                            <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
                             <div class="page-title">
-                                <a href="/services">关于</a>
+                                <a href="/about">关于</a>
                             </div>
                             <div class="page-title">
                                 <a href="/contact">联系</a>
