--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@
             </div>
             <div class="nav-container">
                 <nav data-hover-hint="nav">
-                    <div class="gallery-title"><a href="/portfolio" class="active">主页</a></div>
+                    <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
                     <div class="page-title">
-                        <a href="/services">关于</a>
+                        <a href="/about">关于</a>
                     </div>
                     <div class="page-title">
                         <a href="/contact">联系</a>
